--- a/03_Guess_Number/style.css
+++ b/03_Guess_Number/style.css
@@ -1,24 +1,45 @@
+@font-face {
+    font-family: Pompadur; /* Гарнитура шрифта */
+    src: url(font/Laptev_Brush.otf); /* Путь к файлу со шрифтом */
+}
 * {
     margin: 0px;
+    font-family:Pompadur;
+    font-size: 20px;
 }
 p {
     margin-top: 5px;
     margin-bottom: 5px;
 }
-input {
-    border-radius: 5px;
-}
+
 .container {
-    max-width: 400px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: black;
-    border-image: initial;
-    border-radius: 20px;
-    margin: 50px auto 0px;
+    width: 400px;
+    margin: 80px auto;
     padding: 20px;
-    /*background: linear-gradient(rgb(44, 204, 196), rgb(234, 253, 252));*/
+    background: linear-gradient(325deg,#fbc6d0 50%,#c2d1e5 50%);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.12);
 }
 .condition, .inputData {
     text-align: center;
+}
+::-webkit-scrollbar {
+    width: 0;
+}
+body {
+    height: 89vh;
+    background-image: linear-gradient(0deg,#c2d1e5 30%,#fbc6d0);
+}
+
+input[type="button"] {
+    height: 30px;
+    width: 100px;
+    font-family:Pompadur;
+    background-color: #c2d1e5;
+    background-clip: padding-box;
+    border:0px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.12);
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+input[type="button"]:hover {
+    background-color: #fbc6d0;
 }
