feat: refactor ana test

--- a/05_CSS_intro/Guess_Number/src/style/style.scss
+++ b/05_CSS_intro/Guess_Number/src/style/style.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Pompadur; /* Гарнитура шрифта */
-  src: url(font/Laptev_Brush.otf); /* Путь к файлу со шрифтом */
+  src: url(../font/Laptev_Brush.otf); /* Путь к файлу со шрифтом */
 }
 
 body {
