--- a/05_CSS_intro/Randomizer/src/styles/style.scss
+++ b/05_CSS_intro/Randomizer/src/styles/style.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Pompadur; /* Гарнитура шрифта */
-  src: url(font/NeutralFace.otf); /* Путь к файлу со шрифтом */
+  src: url(../font/NeutralFace.otf); /* Путь к файлу со шрифтом */
 }
 
 @mixin font {
