--- a/05_CSS_intro/Randomizer/src/styles/style.scss
+++ b/05_CSS_intro/Randomizer/src/styles/style.scss
@@ -6,6 +6,7 @@
 @mixin font {
   font-family: Pompadur;
   font-size: 20px;
+  font-weight: 400;
 }
 
 html {
@@ -13,12 +14,7 @@ html {
 }
 
 body {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-image: linear-gradient(180deg, rgba(231, 151, 207, 0.47), rgba(180, 163, 229, 0.46));
+  background-image: linear-gradient(90deg, #aea9d0, #716da6);
 }
 
 input:nth-of-type(2n) {
@@ -26,21 +22,36 @@ input:nth-of-type(2n) {
 }
 
 .container {
-  width: 500px;
-  padding: 20px;
-  background-image: linear-gradient(325deg, #e797cf 50%, #b4a3e5 50%);
-  box-shadow: 0 0 15px #8d8788;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  width: 550px;
+  height: 550px;
+  margin: 70px auto;
+  background-color: #917898;
+  text-align: center;
+  border-radius: 10%;
+  box-shadow: 20px 15px 15px #2C0144;
 
 
   &__input--button {
     @include font;
-    font-size: 25px;
-    width: 150px;
+    display: block;
+    font-size: 30px;
+    width: 70%;
+    height: calc(2rem + 7px);
+    margin-bottom: 30px;
+    margin-top: 20px;
+    padding-bottom: 5px;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #3A164E;
+    border-radius: 10px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
     &:hover {
       box-shadow: 0 0 20px #ee9595;
@@ -58,13 +69,32 @@ input:nth-of-type(2n) {
   &__input--number {
     @include font;
 
+    display: block;
+    width: 70%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #3A164E;
+    border-radius: 10px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
     &:focus {
       outline: 2px solid #442d3f;
+    }
+
+    &::placeholder {
+
+      color: rgba(85, 24, 118, 0.57);
+      opacity: 0.4;
     }
   }
 
   &__text {
     margin: 10px 0;
+
   }
 
   &__condition {
@@ -84,3 +114,36 @@ input:nth-of-type(2n) {
 
 }
 
+.object {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  bottom: 200px;
+  background-image: linear-gradient(90deg, #1E0033, #a66da3);
+  border-radius: 50%;
+  animation: box 4s infinite;
+  &:hover {
+    transform: rotate(360deg);
+  }
+}
+
+
+@keyframes box {
+  0% {
+    left: 0;
+    bottom: 250px;
+  }
+  70%{
+    bottom: 50px;
+  }
+  80% {
+    left: 350px;
+    bottom: 250px;
+    transform: rotate(360deg);
+  }
+  100%{
+
+    left: 350px;
+    bottom: 50px;
+  }
+}
