--- a/09_Application_Calculator/src/style/style.scss
+++ b/09_Application_Calculator/src/style/style.scss
@@ -1,10 +1,99 @@
+$height: 350px;
+
+body {
+  font-size: 16px;
+  background-color: #94839c;
+  font-family: 'Open Sans', sans-serif;
+}
 
 .calc {
   margin: 50px auto;
-  width: 300px;
-  height: 500px;
-  border-radius: 15px;
-  background-color: #000000;
-  color: #ffffff;
-  padding: 15px;
+  width: 550px;
+  height: $height;
+  background-color: #403f3f;
+  color: #000000;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 7px 4px 7px 0 #585656dd;
+
+  &__screen {
+    border-radius: 10px;
+    height: 15%;
+    background-color: #313030;
+    padding: 15px;
+    margin-bottom: 10px;
+    text-align: right;
+    box-shadow: inset 0 0 3px 0 grey;
+  }
+
+  &__buttons {
+  }
+
+  &__text {
+
+    font-size: 2rem;
+    margin: 0;
+  }
+}
+
+.button {
+
+  border-radius: 10px;
+  margin: 2px;
+  border: none;
+  height: calc((#{$height}*0.75 - 20px)/5) ;
+  background-color: rgb(215, 214, 218);
+  font-size: inherit;
+  display: inline-block;
+  width: 8.5%;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+  box-shadow: 0 0 10px 1px #000000;
+  &:nth-child(47){
+    width:18.5%;
+  }
+
+  &:nth-child(10n+10){
+    background-color: orange;
+  }
+  &:last-child {
+    background-color: orange;
+  }
+
+  &:hover {
+    filter: brightness(140%);
+  }
+
+  &:active {
+    filter: brightness(40%);
+  }
+}
+
+sub, sup {
+  /* Specified in % so that the sup/sup is the
+     right size relative to the surrounding text */
+  font-size: 75%;
+
+  /* Zero out the line-height so that it doesn't
+     interfere with the positioning that follows */
+  line-height: 0;
+
+  /* Where the magic happens: makes all browsers position
+     the sup/sup properly, relative to the surrounding text */
+  position: relative;
+
+  /* Note that if you're using Eric Meyer's reset.css, this
+     is already set and you can remove this rule */
+  vertical-align: baseline;
+}
+
+sup {
+  /* Move the superscripted text up */
+  top: -0.5em;
+}
+
+sub {
+  /* Move the subscripted text down, but only
+     half as far down as the superscript moved up */
+  bottom: -0.25em;
 }
