feat: add promise

--- a/13_HW/src/pages/Main/styles.scss
+++ b/13_HW/src/pages/Main/styles.scss
@@ -1,14 +1,66 @@
+@mixin fonts {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+body {
+  background-color: rgba(255, 213, 216, 0.94);
+  @include fonts;
+}
+
 .generate {
+
+  background-color: #ffc0c3;
+  margin-top: 15px;
+  padding: 10px;
+  height: fit-content;
+  border-radius: 5px;
+  box-shadow: 6px 7px 12px 0 rgba(75, 56, 57, 0.48);
+
   &__block {
     display: flex;
     justify-content: center;
     margin-top: 5px;
   }
-  &__input-text {
 
+  &__input-text {
     margin: 0 20px;
+    @include fonts;
+
   }
+
   &__text {
+    font-family: inherit;
     width: 100px;
   }
+
+  &__header {
+    text-align: center;
+    margin-top: 0;
+  }
+
+  &__button {
+    @include fonts;
+
+  }
+}
+
+.button {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+
+  &__items {
+    @include fonts;
+  }
+}
+
+.canvas {
+  border: 1px solid pink;
 }
